# ark-pzpi-23-5-tkach-mykhailo

./: .gitignore  LICENSE  README.md
Lab1/: ark-pzpi-23-5-tkach-mykhailo-task1.txt  pzpi-23-5-tkach-mykhailo-lab1.txt
Lab2/: arkpz-pzpi-23-5-tkach-mykhailo-task2.txt  pzpi-23-5-tkach-mykhailo-lab2.txt
Lab2/pzpi-23-5-tkach-mykhailo-lab2/: CMakeLists.txt  video_scenario.txt
Lab2/pzpi-23-5-tkach-mykhailo-lab2/include/: controllers.h  database.h  models.h  repositories.h  services.h
Lab2/pzpi-23-5-tkach-mykhailo-lab2/src/: controllers.cpp  database.cpp  main.cpp
Lab3/: pzpi-23-5-tkach-mykhailo-lab3.txt
Lab3/pzpi-23-5-tkach-mykhailo-lab3/: start.sh
Lab3/pzpi-23-5-tkach-mykhailo-lab3/include/: controllers.h  database.h  models.h  repositories.h  services.h
Lab3/pzpi-23-5-tkach-mykhailo-lab3/src/: controllers.cpp  database.cpp  main.cpp
Lab4/: pzpi-23-5-tkach-mykhailo-lab4.txt
Lab4/pzpi-23-5-tkach-mykhailo-lab4/: .gitignore
Lab4/pzpi-23-5-tkach-mykhailo-lab4/code-examples/: diagram.json  platformio.ini
Lab4/pzpi-23-5-tkach-mykhailo-lab4/code-examples/src/: main.cpp
Lab5/: ark-pzpi-23-5-tkach-mykhailo-task5.txt  pzpi-23-5-tkach-mykhailo-lab5.txt
Lab5/pzpi-23-5-tkach-mykhailo-lab5/: .gitignore
Lab5/pzpi-23-5-tkach-mykhailo-lab5/code-examples/: Dockerfile  docker-compose.yml  start.sh
Lab5/pzpi-23-5-tkach-mykhailo-lab5/code-examples/include/: controllers.h  database.h  models.h  services.h
Pract1/: arkpz-pzpi-23-5-tkach-mykhailo-pract1.txt  pzpi-23-5-tkach-mykhailo-pract1.txt
Pract2/: arkpz-pzpi-23-5-tkach-mykhailo-pract2.txt
(+3 files in other folders)
